<resources>
    <string name="app_name">HomeWork</string>
    <string name="text">TextView</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="swap">SWAP</string>
    <string name="italy">Italy</string>
    <string name="austria">Austria</string>
    <string name="poland">Poland</string>
    <string name="colombia">Colombia</string>
    <string name="madagascar">Madagascar</string>
    <string name="thailand">Thailand</string>
    <string name="denmark">Denmark</string>
    <string name="homework1">homeWork1</string>
    <string name="homework2">homeWork2</string>
    <string name="homework3">homeWork3</string>
    <string name="picture">Picture</string>
    <string name="link">http://www.youloveit.ru/uploads/gallery/main/162/pikachu.png</string>
    <string name="homework4">HomeWork4</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clock">Clock</string>
    <string name="homework5">HomeWork5</string>
    <string name="wi_fi_on">Wi-Fi ON</string>
    <string name="wi_fi_off">Wi-Fi OFF</string>
    <string name="homework6">HomeWork6</string>
    <string name="homework7">HomeWork7</string>
    <string name="homework8">HomeWork8</string>
    <string name="timer">TIMER</string>
    <string name="homework9">HomeWork9</string>
    <string name="homework10">HomeWork10</string>
</resources>
