<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginTop="150dp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="100dp"
        android:textColor="#ff0000"
        android:layout_gravity="center"
        android:text="@string/timer"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">
    <Button
    android:id="@+id/buttonHome1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:background="#ffffff"
    android:text="@string/start" />
    <Button
        android:id="@+id/buttonHome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:background="#ffffff"
        android:text="@string/stop" />
</LinearLayout>
</LinearLayout>