<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="#f20606" />
            <View
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="#f7f5f5"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="#f20606"
                />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/austria"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:background="#868484"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="127.5dp"
                android:background="#ffffff"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="127.5dp"
                android:background="#c40707"
                />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/poland"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:background="#868484"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:layout_weight="1"
                android:background="#14df06"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:layout_weight="1"
                android:background="#ffffff"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:layout_weight="1"
                android:background="#f20606"
                />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/italy"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:background="#868484"
                />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="127.5dp"
                android:background="#fdd703"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="63.75dp"
                android:background="#060dd9"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="63.75dp"
                android:background="#c40707"
                />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/colombia"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:background="#868484"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <View
                android:layout_width="120dp"
                android:layout_height="255dp"
                android:background="#ffffff"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="127.5dp"
                        android:background="#f20606"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="127.5dp"
                        android:background="#14df06"
                        />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/madagascar"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:background="#868484"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="42.5dp"
                android:background="#f20606"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="42.5dp"
                android:background="#ffffff"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:background="#060dd9"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="42.5dp"
                android:background="#ffffff"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="42.5dp"
                android:background="#f20606"
                />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/thailand"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:background="#868484"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="132dp"
                    android:layout_height="111dp"
                    android:background="#c40707"
                    />


                <View
                    android:layout_width="33dp"
                    android:layout_height="111dp"
                    android:background="#ffffff"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="111dp"
                    android:background="#c40707"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:background="#ffffff"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="132dp"
                    android:layout_height="111dp"
                    android:background="#c40707"
                    />


                <View
                    android:layout_width="33dp"
                    android:layout_height="111dp"
                    android:background="#ffffff"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="111dp"
                    android:background="#c40707"
                    />
            </LinearLayout>

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/denmark"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:gravity="center"
                android:background="#868484"
                />
        </FrameLayout>

    </LinearLayout>
</ScrollView>